--- a/app/assets/css/stylish-portfolio.css
+++ b/app/assets/css/stylish-portfolio.css
@@ -184,8 +184,8 @@ hr.small {
     display: table;
     width: 100%;
     height: 400px;
-    color: #fff;
-    background: url(../images/callout.jpg) no-repeat center center scroll;
+    color: #179;
+    background: url(../images/bg.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
